Bug 279551 - Wrong window title when deleting a search
Summary: Wrong window title when deleting a search
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Engine (other bugs)
Version First Reported In: 2.1.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-06 20:34 UTC by Andi Clemens
Modified: 2012-06-27 10:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2011-08-06 20:34:19 UTC
Version:           2.1.0 (using KDE 4.7.0) 
OS:                Linux

Wrong confirmation dialog and content

Reproducible: Didn't try

Steps to Reproduce:
1. Select a search from the advanced search view
2. Delete the search
3. Look at the confirmation dialog

Actual Results:  
It reads "Delete Date Search"

Expected Results:  
It should just read "Delete search"

OS: Linux (i686) release 2.6.39-ARCH
Compiler: gcc
Comment 1 Andi Clemens 2011-08-06 20:37:31 UTC
Git commit f833e829754d192c86e2306d28c0902261710531 by Andi Clemens.
Committed on 06/08/2011 at 22:34.
Pushed by aclemens into branch 'master'.

Fix delete confirmation dialog title

BUG:279551

M  +2    -2    digikam/utils/searchmodificationhelper.cpp

http://commits.kde.org/digikam/f833e829754d192c86e2306d28c0902261710531
Comment 2 Andi Clemens 2011-08-06 20:44:20 UTC
Git commit e312a8efa6949e30f1e65d2a2d9316f7dc0dbd81 by Andi Clemens.
Committed on 06/08/2011 at 22:43.
Pushed by aclemens into branch 'master'.

The context menu must be fixed as well.

CCBUG:279551

M  +1    -1    digikam/utils/editablesearchtreeview.cpp
M  +1    -1    digikam/views/leftsidebarwidgets.cpp

http://commits.kde.org/digikam/e312a8efa6949e30f1e65d2a2d9316f7dc0dbd81