Fix delete confirmation dialog title

BUG:279551