digikam/utils/searchmodificationhelper.cpp
@@ -76,9 +76,9 @@ void SearchModificationHelper::slotSearchDelete(SAlbum* searchAlbum)
     // Make sure that a complicated search is not deleted accidentally
     int result = KMessageBox::warningYesNo(d->dialogParent,
                                            i18n("Are you sure you want to "
-                                                "delete the selected Date Search "
+                                                "delete the selected Search "
                                                 "\"%1\"?", searchAlbum->title()),
-                                           i18n("Delete Date Search?"),
+                                           i18n("Delete Search?"),
                                            KGuiItem(i18n("Delete")),
                                            KStandardGuiItem::cancel());
 
